# greenlight-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_all_agents.py
agents/: budget_auditor.py  cro.py  legal_eagle.py  llm_router.py  market_intel.py  red_team.py  script_analyst.py  talent_scout.py
config/: agent_config.yaml.example
demo_data/: build_kickoff.py  sample_budget.csv  sample_contracts.txt  sample_crew.json  sample_script.txt
docs/: HANDOFF.md  architecture.md  breakout_rooms.md  demo_script.md  greenlight_ai_pitch_deck.pptx  pitch_deck.md  setup_band_agents.md
frontend/: app.py  band_client.py
frontend/pages/: 1_Upload.py  2_Debate.py  3_Scorecard.py
orchestrator/: workflow.py
prompts/: budget_auditor.md  cro.md  legal_eagle.md  market_intel.md  red_team.md  script_analyst.md  talent_scout.md
