[project]
name = "greenlight-ai"
version = "0.1.0"
description = "Multi-agent film investment due diligence on Band. Built for the Band of Agents Hackathon."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "GreenLight AI Team" }
]

dependencies = [
    "band-sdk[anthropic,langgraph,crewai,pydantic-ai]>=0.5.0",
    "google-adk>=0.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "langchain-openai>=0.2.0",
    "openai>=1.50.0",
    "google-genai>=0.5.0",
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "orchestrator", "frontend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
